#11901 - find prescriptions